title name changed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <title>Amit Kumar Mishra • Data Analyst Portfolio</title>
+    <title>• Portfolio Website </title>
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
