Added Version Control and certification issuer name

--- a/index.html
+++ b/index.html
@@ -1328,6 +1328,8 @@
               <span>Python</span>
               <span>NumPy</span>
               <span>Pandas</span>
+              <span>Matplotlib</span>
+              <span>Seaborn</span>
             </div>
           </article>
 
@@ -1390,6 +1392,17 @@
               <span>Google Sheets</span>
               <span>Jupyter / Colab</span>
               <span>MS Office</span>
+            </div>
+          </article>
+
+          <article class="skill-card">
+            <div class="skill-header">
+              <div class="skill-name">Version Control</div>
+              <span class="skill-level-pill">Core</span>
+            </div>
+            <div class="skill-tags">
+              <span>Git</span>
+              <span>GitHub</span>
             </div>
           </article>
         </div>
@@ -1745,7 +1758,7 @@
           </article>
 
           <article class="cert-card">
-            <div class="cert-badge">Visualization</div>
+            <div class="cert-badge">Data Visualization</div>
             <h3 class="cert-name">Tata Data Visualization Program</h3>
             <p class="cert-issuer">Forage • Aug 2025</p>
             <p class="cert-meta">
@@ -1763,7 +1776,7 @@
           <article class="cert-card">
             <div class="cert-badge">SQL</div>
             <h3 class="cert-name">SQL for Data Analysis</h3>
-            <p class="cert-issuer">Simplilearn &amp; HackerRank</p>
+            <p class="cert-issuer">SkillCourse</p>
             <p class="cert-meta">
               Completed SQL for Data Analysis (Simplilearn) and SQL
               (Intermediate) on HackerRank to strengthen querying and
@@ -1797,7 +1810,7 @@
           <article class="cert-card">
             <div class="cert-badge">Power BI</div>
             <h3 class="cert-name">Power BI Certification</h3>
-            <p class="cert-issuer">Simplilearn &amp; Microsoft</p>
+            <p class="cert-issuer">SkillCourse</p>
             <p class="cert-meta">
               Demonstrates practical skills in building interactive dashboards,
               data modelling, DAX, and sharing reports for business
