--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <title>• Portfolio Website </title>
+    <title>• Portfolio Website</title>
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
@@ -178,7 +178,8 @@
       }
 
       .nav-links a:hover {
-        color: var(--text);
+        /* color: var(--text); */
+        color: var(--primary);
       }
 
       .nav-links a:hover::after {
@@ -448,6 +449,14 @@
         position: relative;
         overflow: hidden;
       }
+
+      /* .hero-panel:hover{
+         color: var(--primary);
+      }
+
+      .hero-panel:hover::after {
+            width: 100%;
+        } */
 
       .hero-panel-tag {
         font-size: 0.7rem;
@@ -1065,7 +1074,10 @@
       <div class="nav">
         <div class="nav-left">
           <div class="avatar">
-            <img src="images/analyst-monitoring-data-screen.jpg" alt="Amit Kumar Mishra" />
+            <img
+              src="images/analyst-monitoring-data-screen.jpg"
+              alt="Amit Kumar Mishra"
+            />
           </div>
           <div class="nav-title">
             <span class="nav-title-main">Amit Kumar Mishra</span>
@@ -1806,6 +1818,25 @@
             </div>
           </article>
 
+          <article class="cert-card">
+            <div class="cert-badge">Foundations</div>
+            <h3 class="cert-name">Career Essentials in Data Analysis</h3>
+            <p class="cert-issuer">Microsoft &amp; LinkedIn Learning</p>
+            <p class="cert-meta">
+              Completed foundational learning in data analytics including core
+              analyst responsibilities, data preparation, business metrics,
+              dashboard storytelling, and real-world analysis workflows. Covered
+              Excel, Power BI, SQL basics, and analytical mindset development
+              for business environments.
+            </p>
+            <div class="cert-image">
+              <img
+                src="images/carrer-essential-data-analysis.png"
+                alt="Career Essentials in Data Analysis certificate"
+              />
+            </div>
+          </article>
+
           <!-- Power BI -->
           <article class="cert-card">
             <div class="cert-badge">Power BI</div>
@@ -1838,6 +1869,24 @@
               <img
                 src="images/cert-excel-automation.png"
                 alt="Excel Automation using ChatGPT certificate"
+              />
+            </div>
+          </article>
+
+          <article class="cert-card">
+            <div class="cert-badge">SQL</div>
+            <h3 class="cert-name">IDC — 21 Days SQL Challenge</h3>
+            <p class="cert-issuer">IDC | 2025</p>
+            <p class="cert-meta">
+              Completed a structured 21-day SQL challenge focused on hands-on
+              practice with joins, filtering, CTEs, subqueries, window
+              functions, and analytical query patterns used in business
+              reporting and dashboards.
+            </p>
+            <div class="cert-image">
+              <img
+                src="images/idc-sql-certificate.png"
+                alt="IDC 21 Days SQL Challenge certificate"
               />
             </div>
           </article>
