new certification added again

--- a/index.html
+++ b/index.html
@@ -1873,7 +1873,41 @@
             </div>
           </article>
 
-          <article class="cert-card">
+<article class="cert-card">
+  <div class="cert-badge">Excel</div>
+  <h3 class="cert-name">Business Analytics with Excel</h3>
+  <p class="cert-issuer">Microsoft &amp; Simplilearn</p>
+  <p class="cert-meta">
+    Covered analytical principles using Microsoft Excel including data cleaning,
+    pivot tables, KPI tracking, scenario analysis, and business metric
+    interpretation to support decision-making.
+  </p>
+  <div class="cert-image">
+    <img
+      src="images/cert-excel.png"
+      alt="Business Analytics with Excel certificate"
+    />
+  </div>
+</article>
+
+<article class="cert-card">
+  <div class="cert-badge">SQL</div>
+  <h3 class="cert-name">SQL for Data Analysis</h3>
+  <p class="cert-issuer">Simplilearn</p>
+  <p class="cert-meta">
+    Focused on analytical SQL for real business use cases including joins,
+    filtering, aggregation, window functions, subqueries, and data extraction
+    for insights used in dashboards and reporting.
+  </p>
+  <div class="cert-image">
+    <img
+      src="images/cert-sql-simplilearn.png"
+      alt="SQL for Data Analysis certificate"
+    />
+  </div>
+</article>
+
+<article class="cert-card">
             <div class="cert-badge">SQL</div>
             <h3 class="cert-name">IDC — 21 Days SQL Challenge</h3>
             <p class="cert-issuer">IDC | 2025</p>
@@ -1890,6 +1924,7 @@
               />
             </div>
           </article>
+
         </div>
       </section>
 
