Changed html code

--- a/index.html
+++ b/index.html
@@ -1763,245 +1763,168 @@
       </section>
 
       <!-- Certificates -->
-      <section id="certs" class="reveal">
-        <div class="section-header">
-          <div>
-            <div class="section-label">Certificates</div>
-            <h2 class="section-title">Certifications &amp; virtual programs</h2>
-          </div>
-          <p class="section-subtitle">
-            Structured learning that supports my self-driven practice.
-          </p>
-        </div>
-
-        <div class="certs-grid">
-          <!-- Snowflake 1 -->
-          <article class="cert-card">
-            <div class="cert-badge">Snowflake</div>
-            <h3 class="cert-name">Snowflake Hands-On Essentials</h3>
-            <p class="cert-issuer">Snowflake • Badge 1</p>
-            <p class="cert-meta">
-              Essentials workshop focused on getting started with Snowflake,
-              data loading, querying, and core concepts for cloud data
-              warehousing.
-            </p>
-            <div class="cert-image">
-              <img
-                src="images/snowflake-essentials.png"
-                alt="Snowflake Hands-On Essentials certificate"
-              />
-            </div>
-          </article>
-
-          <!-- Snowflake 2 -->
-          <article class="cert-card">
-            <div class="cert-badge">Snowflake</div>
-            <h3 class="cert-name">
-              Collaboration, Marketplace &amp; Cost Estimation
-            </h3>
-            <p class="cert-issuer">Snowflake • Badge 2</p>
-            <p class="cert-meta">
-              Workshop covering collaboration, data marketplace, performance
-              considerations, and cost estimation for real Snowflake workloads.
-            </p>
-            <div class="cert-image">
-              <img
-                src="images/snowflake-collaboration.png"
-                alt="Snowflake Collaboration and Cost Estimation certificate"
-              />
-            </div>
-          </article>
-
-          <article class="cert-card">
-            <div class="cert-badge">Analytics</div>
-            <h3 class="cert-name">HP LIFE – Data Science &amp; Analytics</h3>
-            <p class="cert-issuer">HP Foundation • Aug 2025</p>
-            <p class="cert-meta">
-              Covered fundamentals of data science and analytics, focusing on
-              real-world business applications.
-            </p>
-            <div class="cert-image">
-              <img
-                src="images/cert-hp-life.png"
-                alt="HP LIFE Data Science &amp; Analytics certificate"
-              />
-            </div>
-          </article>
-
-          <article class="cert-card">
-            <div class="cert-badge">Industry</div>
-            <h3 class="cert-name">Deloitte Data Analytics Job Simulation</h3>
-            <p class="cert-issuer">Virtual Experience • Aug 2025</p>
-            <p class="cert-meta">
-              Practised solving client-style analytics tasks, focusing on
-              storytelling with data and stakeholder-ready outputs.
-            </p>
-            <div class="cert-image">
-              <img
-                src="images/cert-deloitte.png"
-                alt="Deloitte Data Analytics Job Simulation certificate"
-              />
-            </div>
-          </article>
-
-          <article class="cert-card">
-            <div class="cert-badge">Data Visualization</div>
-            <h3 class="cert-name">Tata Data Visualization Program</h3>
-            <p class="cert-issuer">Forage • Aug 2025</p>
-            <p class="cert-meta">
-              Learned how to turn business problems into clear visual narratives
-              using charts and dashboards.
-            </p>
-            <div class="cert-image">
-              <img
-                src="images/cert-tata.png"
-                alt="Tata Data Visualization virtual program certificate"
-              />
-            </div>
-          </article>
-
-          <article class="cert-card">
-            <div class="cert-badge">SQL</div>
-            <h3 class="cert-name">SQL for Data Analysis</h3>
-            <p class="cert-issuer">SkillCourse</p>
-            <p class="cert-meta">
-              Completed SQL for Data Analysis (Simplilearn) and SQL
-              (Intermediate) on HackerRank to strengthen querying and
-              problem-solving.
-            </p>
-            <div class="cert-image">
-              <img
-                src="images/cert-sql.png"
-                alt="SQL for Data Analysis and HackerRank SQL certificate"
-              />
-            </div>
-          </article>
-
-          <article class="cert-card">
-            <div class="cert-badge">Foundations</div>
-            <h3 class="cert-name">Career Essentials in Data Analysis</h3>
-            <p class="cert-issuer">Microsoft &amp; LinkedIn</p>
-            <p class="cert-meta">
-              Overview of the data analyst role, core tools, and the mindset
-              required to work with data in business environments.
-            </p>
-            <div class="cert-image">
-              <img
-                src="images/cert-career-essentials.png"
-                alt="Career Essentials in Data Analysis certificate"
-              />
-            </div>
-          </article>
-
-          <article class="cert-card">
-            <div class="cert-badge">Foundations</div>
-            <h3 class="cert-name">Career Essentials in Data Analysis</h3>
-            <p class="cert-issuer">Microsoft &amp; LinkedIn Learning</p>
-            <p class="cert-meta">
-              Completed foundational learning in data analytics including core
-              analyst responsibilities, data preparation, business metrics,
-              dashboard storytelling, and real-world analysis workflows. Covered
-              Excel, Power BI, SQL basics, and analytical mindset development
-              for business environments.
-            </p>
-            <div class="cert-image">
-              <img
-                src="images/carrer-essential-data-analysis.png"
-                alt="Career Essentials in Data Analysis certificate"
-              />
-            </div>
-          </article>
-
-          <!-- Power BI -->
-          <article class="cert-card">
-            <div class="cert-badge">Power BI</div>
-            <h3 class="cert-name">Power BI Certification</h3>
-            <p class="cert-issuer">SkillCourse</p>
-            <p class="cert-meta">
-              Demonstrates practical skills in building interactive dashboards,
-              data modelling, DAX, and sharing reports for business
-              stakeholders.
-            </p>
-            <div class="cert-image">
-              <img
-                src="images/cert-powerbi.png"
-                alt="Power BI certificate by Simplilearn and Microsoft"
-              />
-            </div>
-          </article>
-
-          <!-- Excel Automation -->
-          <article class="cert-card">
-            <div class="cert-badge">Automation</div>
-            <h3 class="cert-name">Excel Automation using ChatGPT</h3>
-            <p class="cert-issuer">Simplilearn &amp; Microsoft</p>
-            <p class="cert-meta">
-              Focused on automating Excel workflows and reports using AI,
-              prompts, and integrations to speed up data analysis and reporting
-              tasks.
-            </p>
-            <div class="cert-image">
-              <img
-                src="images/cert-excel-automation.png"
-                alt="Excel Automation using ChatGPT certificate"
-              />
-            </div>
-          </article>
-
-<article class="cert-card">
-  <div class="cert-badge">Excel</div>
-  <h3 class="cert-name">Business Analytics with Excel</h3>
-  <p class="cert-issuer">Microsoft &amp; Simplilearn</p>
-  <p class="cert-meta">
-    Covered analytical principles using Microsoft Excel including data cleaning,
-    pivot tables, KPI tracking, scenario analysis, and business metric
-    interpretation to support decision-making.
-  </p>
-  <div class="cert-image">
-    <img
-      src="images/cert-excel.png"
-      alt="Business Analytics with Excel certificate"
-    />
+<section id="certs" class="reveal">
+  <div class="section-header">
+    <div>
+      <div class="section-label">Certificates</div>
+      <h2 class="section-title">Certifications &amp; virtual programs</h2>
+    </div>
+    <p class="section-subtitle">
+      Structured learning that supports my self-driven practice.
+    </p>
   </div>
-</article>
 
-<article class="cert-card">
-  <div class="cert-badge">SQL</div>
-  <h3 class="cert-name">SQL for Data Analysis</h3>
-  <p class="cert-issuer">Simplilearn</p>
-  <p class="cert-meta">
-    Focused on analytical SQL for real business use cases including joins,
-    filtering, aggregation, window functions, subqueries, and data extraction
-    for insights used in dashboards and reporting.
-  </p>
-  <div class="cert-image">
-    <img
-      src="images/cert-sql-simplilearn.png"
-      alt="SQL for Data Analysis certificate"
-    />
+  <div class="certs-grid">
+    <!-- Snowflake 1 -->
+    <article class="cert-card">
+      <div class="cert-badge">Snowflake</div>
+      <h3 class="cert-name">Snowflake Hands-On Essentials</h3>
+      <p class="cert-issuer">Snowflake • Badge 1</p>
+      <p class="cert-meta">
+        Essentials workshop focused on getting started with Snowflake, data loading,
+        querying, and core concepts for cloud data warehousing.
+      </p>
+      <div class="cert-image">
+        <img src="images/snowflake-essentials.png" alt="Snowflake Hands-On Essentials certificate" />
+      </div>
+    </article>
+
+    <!-- Snowflake 2 -->
+    <article class="cert-card">
+      <div class="cert-badge">Snowflake</div>
+      <h3 class="cert-name">Collaboration, Marketplace &amp; Cost Estimation</h3>
+      <p class="cert-issuer">Snowflake • Badge 2</p>
+      <p class="cert-meta">
+        Workshop covering collaboration, data marketplace, performance considerations,
+        and cost estimation for real Snowflake workloads.
+      </p>
+      <div class="cert-image">
+        <img src="images/snowflake-collaboration.png" alt="Snowflake Collaboration and Cost Estimation certificate" />
+      </div>
+    </article>
+
+    <!-- HP LIFE -->
+    <article class="cert-card">
+      <div class="cert-badge">Analytics</div>
+      <h3 class="cert-name">HP LIFE – Data Science &amp; Analytics</h3>
+      <p class="cert-issuer">HP Foundation • Aug 2025</p>
+      <p class="cert-meta">
+        Covered fundamentals of data science and analytics, focusing on real-world business applications.
+      </p>
+      <div class="cert-image">
+        <img src="images/cert-hp-life.png" alt="HP LIFE Data Science & Analytics certificate" />
+      </div>
+    </article>
+
+    <!-- Deloitte -->
+    <article class="cert-card">
+      <div class="cert-badge">Industry</div>
+      <h3 class="cert-name">Deloitte Data Analytics Job Simulation</h3>
+      <p class="cert-issuer">Virtual Experience • Aug 2025</p>
+      <p class="cert-meta">
+        Practised solving client-style analytics tasks, focusing on storytelling with data and stakeholder-ready outputs.
+      </p>
+      <div class="cert-image">
+        <img src="images/cert-deloitte.png" alt="Deloitte Data Analytics Job Simulation certificate" />
+      </div>
+    </article>
+
+    <!-- Tata -->
+    <article class="cert-card">
+      <div class="cert-badge">Visualization</div>
+      <h3 class="cert-name">Tata Data Visualization Program</h3>
+      <p class="cert-issuer">Forage • Aug 2025</p>
+      <p class="cert-meta">
+        Learned how to turn business problems into clear visual narratives using charts and dashboards.
+      </p>
+      <div class="cert-image">
+        <img src="images/cert-tata.png" alt="Tata Data Visualization certificate" />
+      </div>
+    </article>
+
+    <!-- SQL Simplilearn (kept one canonical) -->
+    <article class="cert-card">
+      <div class="cert-badge">SQL</div>
+      <h3 class="cert-name">SQL for Data Analysis</h3>
+      <p class="cert-issuer">Simplilearn</p>
+      <p class="cert-meta">
+        Focused on analytical SQL for real business use cases including joins, filtering,
+        aggregation, window functions, and subqueries.
+      </p>
+      <div class="cert-image">
+        <img src="images/cert-sql-simplilearn.png" alt="SQL for Data Analysis certificate" />
+      </div>
+    </article>
+
+    <!-- Career Essentials (Microsoft + LinkedIn) -->
+    <article class="cert-card">
+      <div class="cert-badge">Foundations</div>
+      <h3 class="cert-name">Career Essentials in Data Analysis</h3>
+      <p class="cert-issuer">Microsoft &amp; LinkedIn Learning</p>
+      <p class="cert-meta">
+        Overview of the data analyst role, core tools, and the mindset required to work with data in business environments.
+      </p>
+      <div class="cert-image">
+        <img src="images/cert-career-essentials.png" alt="Career Essentials in Data Analysis certificate" />
+      </div>
+    </article>
+
+    <!-- Power BI -->
+    <article class="cert-card">
+      <div class="cert-badge">Power BI</div>
+      <h3 class="cert-name">Power BI Certification</h3>
+      <p class="cert-issuer">SkillCourse</p>
+      <p class="cert-meta">
+        Demonstrates practical skills in building interactive dashboards, data modelling, DAX, and sharing reports for stakeholders.
+      </p>
+      <div class="cert-image">
+        <img src="images/cert-powerbi.png" alt="Power BI certificate" />
+      </div>
+    </article>
+
+    <!-- Excel Automation -->
+    <article class="cert-card">
+      <div class="cert-badge">Automation</div>
+      <h3 class="cert-name">Excel Automation using ChatGPT</h3>
+      <p class="cert-issuer">Simplilearn &amp; Microsoft</p>
+      <p class="cert-meta">
+        Focused on automating Excel workflows and reports using AI, prompts, and integrations to speed up data analysis tasks.
+      </p>
+      <div class="cert-image">
+        <img src="images/cert-excel-automation.png" alt="Excel Automation using ChatGPT certificate" />
+      </div>
+    </article>
+
+    <!-- Business Analytics with Excel -->
+    <article class="cert-card">
+      <div class="cert-badge">Excel</div>
+      <h3 class="cert-name">Business Analytics with Excel</h3>
+      <p class="cert-issuer">Microsoft &amp; Simplilearn</p>
+      <p class="cert-meta">
+        Covered analytical principles using Microsoft Excel including data cleaning, pivot tables, KPI tracking, and scenario analysis.
+      </p>
+      <div class="cert-image">
+        <img src="images/cert-excel.png" alt="Business Analytics with Excel certificate" />
+      </div>
+    </article>
+
+    <!-- IDC 21 days SQL challenge -->
+    <article class="cert-card">
+      <div class="cert-badge">SQL</div>
+      <h3 class="cert-name">IDC — 21 Days SQL Challenge</h3>
+      <p class="cert-issuer">IDC | 2025</p>
+      <p class="cert-meta">
+        Completed a structured 21-day SQL challenge focused on hands-on practice with joins, CTEs, window functions and analytical queries.
+      </p>
+      <div class="cert-image">
+        <img src="images/idc-sql-certificate.png" alt="IDC 21 Days SQL Challenge certificate" />
+      </div>
+    </article>
+
+    <!-- ADCA (portrait image) - use tall-cert class -->
   </div>
-</article>
+</section>
 
-<article class="cert-card">
-            <div class="cert-badge">SQL</div>
-            <h3 class="cert-name">IDC — 21 Days SQL Challenge</h3>
-            <p class="cert-issuer">IDC | 2025</p>
-            <p class="cert-meta">
-              Completed a structured 21-day SQL challenge focused on hands-on
-              practice with joins, filtering, CTEs, subqueries, window
-              functions, and analytical query patterns used in business
-              reporting and dashboards.
-            </p>
-            <div class="cert-image">
-              <img
-                src="images/idc-sql-certificate.png"
-                alt="IDC 21 Days SQL Challenge certificate"
-              />
-            </div>
-          </article>
-
-        </div>
-      </section>
 
       <!-- Resume -->
       <section id="resume" class="reveal">
