--- a/index.html
+++ b/index.html
@@ -1869,6 +1869,24 @@
       </div>
     </article>
 
+    <article class="cert-card">
+  <div class="cert-badge">Foundations</div>
+  <h3 class="cert-name">Career Essentials in Data Analysis</h3>
+  <p class="cert-issuer">Microsoft &amp; LinkedIn Learning</p>
+  <p class="cert-meta">
+    Completed the full professional learning path covering data analysis
+    fundamentals, visualization, analytics workflows, and practical
+    business-focused data skills with real-world scenarios.
+  </p>
+  <div class="cert-image">
+    <img
+      src="images/carrer-essential-data-analysis.png"
+      alt="Career Essentials in Data Analysis Certificate"
+    />
+  </div>
+</article>
+
+
     <!-- Power BI -->
     <article class="cert-card">
       <div class="cert-badge">Power BI</div>
@@ -1881,6 +1899,24 @@
         <img src="images/cert-powerbi.png" alt="Power BI certificate" />
       </div>
     </article>
+
+    <article class="cert-card">
+  <div class="cert-badge">SQL</div>
+  <h3 class="cert-name">30-Days SQL Micro Course</h3>
+  <p class="cert-issuer">SkillCourse • Instructor: Satish Dhawale</p>
+  <p class="cert-meta">
+    Completed a structured 30-day SQL program covering querying fundamentals,
+    joins, filtering, aggregations, subqueries, and hands-on exercises designed
+    for real-world analytics work.
+  </p>
+  <div class="cert-image">
+    <img
+      src="images/cert-sql.png"
+      alt="30-Days SQL Micro Course Certificate"
+    />
+  </div>
+</article>
+
 
     <!-- Excel Automation -->
     <article class="cert-card">
