--- a/index.html
+++ b/index.html
@@ -1608,6 +1608,49 @@
               </a>
             </div>
           </article>
+          <!-- Department Operations Analytics (Fabric + Power BI) -->
+<article class="project-card" data-category="bi end-to-end">
+  <div class="project-top-row">
+    <h3 class="project-name">Department Operations – End-to-End Analytics</h3>
+    <span class="project-type">Fabric • End-to-End • BI</span>
+  </div>
+
+  <p class="project-description">
+    Built a complete analytics solution using Microsoft Fabric—starting from
+    raw Excel files to a fully automated Power BI report. The project includes
+    a Lakehouse, Dataflows, Data Pipelines, Warehouse SQL transformations, and
+    a semantic model powering insights on project budgets, capital allocation,
+    and department-wise financial performance.
+  </p>
+
+  <div class="project-meta">
+    <span>Microsoft Fabric</span>
+    <span>Power BI</span>
+    <span>Dataflow Gen2</span>
+    <span>SQL Warehouse</span>
+    <span>DAX</span>
+  </div>
+
+  <div class="project-screenshot">
+    <img
+      src="images/fabric-department-operations-dashboard.png"
+      alt="Department Operations Power BI Dashboard"
+    />
+  </div>
+
+  <div class="project-actions">
+    <a
+      class="project-link primary"
+      href="https://github.com/amit-mishra-ai/Department-Operations-Analytics-Dashboard"
+      target="_blank"
+      rel="noreferrer"
+    >
+      View GitHub Repo
+      <span>↗</span>
+    </a>
+  </div>
+</article>
+
 
           <!-- Sales Analysis Dashboard -->
           <article class="project-card" data-category="bi end-to-end">
