--- a/index.html
+++ b/index.html
@@ -1818,6 +1818,44 @@
   </div>
 
   <div class="certs-grid">
+
+    <!-- DP-600 Microsoft Fabric Certification -->
+<article class="cert-card">
+  <div class="cert-badge">Microsoft</div>
+
+  <h3 class="cert-name">
+    Microsoft Certified: Fabric Analytics Engineer Associate (DP-600)
+  </h3>
+
+  <p class="cert-issuer">Microsoft • Dec 2025</p>
+
+  <p class="cert-meta">
+    Earned the DP-600 certification validating hands-on expertise in Microsoft
+    Fabric, including Lakehouse architecture, Dataflows Gen2, Warehouses,
+    Semantic Models, DAX, SQL analytics, and end-to-end Power BI reporting with
+    automated data pipelines.
+  </p>
+
+  <div class="cert-image">
+    <img
+      src="images/dp-600-preview.png"
+      alt="Microsoft DP-600 Fabric Analytics Engineer Associate Certificate"
+    />
+  </div>
+
+  <div class="project-actions" style="margin-top: 0.6rem;">
+    <a
+      class="project-link primary"
+      href="https://learn.microsoft.com/api/credentials/share/en-us/AmitMishra-7923/BA0BED1A536446C6?sharingId=89C5D92628E942D0"
+      target="_blank"
+      rel="noreferrer"
+    >
+      View Certificate 
+      <span>↗</span>
+    </a>
+  </div>
+</article>
+
     <!-- Snowflake 1 -->
     <article class="cert-card">
       <div class="cert-badge">Snowflake</div>
