--- a/index.html
+++ b/index.html
@@ -2058,7 +2058,7 @@
         <div class="github-cta-row">
           <a
             class="github-cta"
-            href="Amit-Kumar-Mishra-Resume.pdf"
+            href="Amit Kumar Mishra Resume.pdf"
             target="_blank"
             rel="noreferrer"
           >
