Blinit Project Added

--- a/index.html
+++ b/index.html
@@ -1569,7 +1569,13 @@
                 View on GitHub
                 <span>↗</span>
               </a>
+              <a class="project-link" href="https://app.powerbi.com/view?r=eyJrIjoiNTQ5OTJhMjItZGZmZS00YmVhLWFlN2ItNjAyMzJjOWY1NzRlIiwidCI6IjYyOTZhNGQzLTZiNjgtNGY3NC05ZWRhLWIxMDAzMzkyYzAxOCJ9" target="_blank">
+              View Live Dashboard
+              <span>↗</span>
+</a>
+
             </div>
+            
           </article>
 
           <!-- Weather Forecasting -->
@@ -1607,6 +1613,10 @@
                 View on GitHub
                 <span>↗</span>
               </a>
+              <a class="project-link" href="https://app.powerbi.com/view?r=eyJrIjoiZDZhYTI3NjgtYWM1Yy00ZTIwLTg0ZTItNWQyN2FjYjNjNjBhIiwidCI6IjYyOTZhNGQzLTZiNjgtNGY3NC05ZWRhLWIxMDAzMzkyYzAxOCJ9" target="_blank">
+  View Live Dashboard
+  <span>↗</span>
+</a>
             </div>
           </article>
           <!-- Department Operations Analytics (Fabric + Power BI) -->
@@ -1655,6 +1665,69 @@
             </div>
           </article>
 
+<!-- Blinkit Retail Sales & Outlet Performance Analysis -->
+<article class="project-card" data-category="bi end-to-end">
+  <div class="project-top-row">
+    <h3 class="project-name">
+      Blinkit Retail Sales & Outlet Performance Analysis
+    </h3>
+    <span class="project-type">End-to-End • BI</span>
+  </div>
+
+  <p class="project-description">
+    Built an end-to-end Power BI analytics solution to analyze Blinkit grocery
+    sales and outlet performance. The dashboard uncovers how product categories,
+    outlet characteristics, visibility, and ratings influence overall sales
+    outcomes and operational efficiency.
+  </p>
+
+  <div class="project-meta">
+    <span>Power BI</span>
+    <span>Power Query</span>
+    <span>Retail Analytics</span>
+    <span>Sales Performance</span>
+  </div>
+
+  <!-- <p class="project-description">
+    <strong>Key Analysis & Insights:</strong><br />
+    • Tier 3 outlets generate higher overall sales than Tier 1 and Tier 2<br />
+    • Fruits, snacks, and household items are top revenue drivers<br />
+    • High item visibility does not always translate to higher sales<br />
+    • Similar product ratings can lead to very different sales outcomes
+  </p>
+
+  <p class="project-description">
+    <strong>Business Value:</strong><br />
+    Enables better product placement, outlet-level inventory planning, and
+    data-driven sales optimization by highlighting inefficiencies and
+    high-impact opportunities.
+  </p> -->
+<div class="project-screenshot">
+  <img
+    src="images/blinkit-dashboard.png"
+    alt="Blinkit Retail Sales Power BI Dashboard"
+  />
+</div>
+
+  <div class="project-actions">
+    <a
+      class="project-link primary"
+      href="https://github.com/amit-mishra-ai/Blinkit-Retail-Sales-Analysis.git"
+      target="_blank"
+      rel="noreferrer"
+    >
+      View Project on GitHub
+      <span>↗</span>
+    </a>
+    <a class="project-link" href="https://app.fabric.microsoft.com/view?r=eyJrIjoiNWRlNWNlMDktNWFmOS00YTcwLWI2ZWMtM2FiODA0OWRlMTBlIiwidCI6IjYyOTZhNGQzLTZiNjgtNGY3NC05ZWRhLWIxMDAzMzkyYzAxOCJ9" target="_blank"
+    rel="noreferrer">
+  View Live Dashboard
+  <span>↗</span>
+</a>
+  </div>
+</article>
+
+
           <!-- Sales Analysis Dashboard -->
           <article class="project-card" data-category="bi end-to-end">
             <div class="project-top-row">
@@ -1691,6 +1764,12 @@
                 View GitHub Repo
                 <span>↗</span>
               </a>
+              <a class="project-link" href="https://app.fabric.microsoft.com/view?r=eyJrIjoiY2YyOGZkMzUtMzAyMS00ZWRhLTk2NTctY2E3NTk1YjIwY2VkIiwidCI6IjYyOTZhNGQzLTZiNjgtNGY3NC05ZWRhLWIxMDAzMzkyYzAxOCJ9" target="_blank"
+    rel="noreferrer">
+  View Live Dashboard
+  <span>↗</span>
+</a>
+              
             </div>
           </article>
         </div>
