--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,7 @@
             </button>
             <a
               class="btn btn-ghost"
-              href="Amit-Kumar-Mishra-Resume.pdf"
+              href="Amit Kumar Mishra Resume.pdf"
               target="_blank"
               rel="noreferrer"
             >
